# oysirs

./: .gitignore  README.md  app.py  cdk.context.json  cdk.json  pyproject.toml
.github/workflows/: deploy.yml  destroy.yml  synth.yml
oysirs/: __about__.py  oysirs_stack.py
oysirs/api/: main.py  rest_api.py
oysirs/api/banks_s3_buckets/: main.py
oysirs/api/banks_s3_buckets/functions/banks_raw_handler/: main.py
oysirs/api/banks_s3_buckets/functions/banks_raw_processor/: Dockerfile  main.py
oysirs/api/banks_s3_buckets/functions/banks_raw_processor/utils/: helpers.py
oysirs/api/functions/rest_handler/: main.py
oysirs/api/functions/rest_handler/routes/: customers.py  health.py  uploads.py
oysirs/authentications/: __init__.py  main.py
oysirs/databases/: main.py
oysirs/databases/functions/migrate/: alembic.ini  env.py  main.py
oysirs/databases/functions/migrate/versions/: 1da4b82e49bb_init.py  2b5c9d3e7f1a_add_tax_id_tin_rc_to_customers.py
oysirs/layer/: __init__.py  main.py
oysirs/shared/: main.py
oysirs/shared/layers/common/: requirements.txt
oysirs/shared/layers/python_sdk/internal/: README.md  pyproject.toml
oysirs/shared/layers/python_sdk/internal/src/internal/database/: session.py
oysirs/shared/layers/python_sdk/internal/src/internal/database/helpers/: customer.py  database.py  idx.py  upload.py  user.py
oysirs/shared/layers/python_sdk/internal/src/internal/database/models/: base.py  customer.py  upload.py  user.py
oysirs/shared/layers/python_sdk/internal/src/internal/database/schemas/: base.py  customer.py  upload.py
oysirs/shared/layers/python_sdk/internal/tests/unit/: serializers.py
oysirs/user_interface/: main.py
oysirs/user_interface/next-app/: .env.example  .env.production  .gitignore  eslint.config.mjs  package-lock.json  package.json
oysirs/user_interface/next-app/app/: globals copy.css  layout.tsx  page.tsx  providers.tsx
oysirs/user_interface/next-app/app/customers/: page.tsx
oysirs/user_interface/next-app/app/customers/detail/: page.tsx
oysirs/user_interface/next-app/app/records/: page.tsx
oysirs/user_interface/next-app/app/upload/: page.tsx
oysirs/user_interface/next-app/components/: CustomersList.tsx  DataRecordsList.tsx  FileUpload.tsx  TransactionTables.tsx
oysirs/user_interface/next-app/lib/: client.ts
oysirs/user_interface/next-app/lib/contexts/: repo.tsx
oysirs/user_interface/next-app/lib/repositories/: base.ts  prod.ts
oysirs/user_interface/next-app/lib/types/: customers.tsx  uploads.tsx
oysirs/user_interface/next-app/lib/utils/: intl.tsx
oysirs/user_interface/next-app/src/app/: layout.tsx  providers.tsx
oysirs/user_interface/next-app/src/app/(main)/: layout.tsx  page.tsx
oysirs/user_interface/next-app/src/components/: CustomersList.tsx  DashboardLayout.tsx  DataRecordsList.tsx  ExcelUpload.tsx  FileUpload.tsx  Overlay.tsx  RecordDetail.tsx  ReportDownload.tsx  TransactionTables.tsx
oysirs/user_interface/next-app/src/lib/contexts/: auth.tsx
oysirs/user_interface/next-app/src/lib/types/: base.tsx
oysirs/user_interface/next-app/src/lib/utils/: options.tsx
tests/unit/: test_oysirs_stack.py
(+6 files in other folders)
