[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "oysirs"
dynamic = ["version"]
description = "Oyo State Internal Revenue Service"
readme = "README.md"
requires-python = ">=3.12"
license = "MIT"
keywords = []
authors = [
  { name = "Ahmad A. Khidir", email = "khidirahmad05@gmail.com" },
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: Implementation :: CPython",
  "Programming Language :: Python :: Implementation :: PyPy",
]
dependencies = [
  "aws-cdk-lib",
  "constructs",
  "aws-lambda-powertools[all]",
  "types-boto3[full,boto3]",
  "requests",
  "internal @ file:oysirs/shared/layers/python_sdk/internal",
]

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.envs.default]
post-install-commands = [
  "pip install -r oysirs/shared/layers/common/requirements.txt"
]

[project.urls]
Documentation = "https://github.com/ahmadkhidir/-#readme"
Issues = "https://github.com/ahmadkhidir/-/issues"
Source = "https://github.com/ahmadkhidir/-"

[tool.hatch.version]
path = "oysirs/__about__.py"

[tool.hatch.envs.types]
extra-dependencies = [
  "mypy>=1.0.0",
]
[tool.hatch.envs.types.scripts]
check = "mypy --install-types --non-interactive {args:src/_ tests}"

[tool.coverage.run]
source_pkgs = ["_", "tests"]
branch = true
parallel = true
omit = [
  "src/_/__about__.py",
]

[tool.coverage.paths]
_ = ["src/_", "*/-/src/_"]
tests = ["tests", "*/-/tests"]

[tool.coverage.report]
exclude_lines = [
  "no cov",
  "if __name__ == .__main__.:",
  "if TYPE_CHECKING:",
]
