[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "internal"
dynamic = ["version"]
description = ''
readme = "README.md"
requires-python = ">=3.12"
license = "MIT"
keywords = []
authors = [
  { name = "Ahmad A. Khidir", email = "khidirahmad05@gmail.com" },
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: Implementation :: CPython",
  "Programming Language :: Python :: Implementation :: PyPy",
]
dependencies = []

[project.urls]
Documentation = "https://github.com/ahmadkhidir/internal#readme"
Issues = "https://github.com/ahmadkhidir/internal/issues"
Source = "https://github.com/ahmadkhidir/internal"

[tool.hatch.version]
path = "src/internal/__about__.py"

[tool.hatch.envs.types]
extra-dependencies = [
  "mypy>=1.0.0",
]
[tool.hatch.envs.types.scripts]
check = "mypy --install-types --non-interactive {args:src/internal tests}"

[tool.coverage.run]
source_pkgs = ["internal", "tests"]
branch = true
parallel = true
omit = [
  "src/internal/__about__.py",
]

[tool.coverage.paths]
internal = ["src/internal", "*/internal/src/internal"]
tests = ["tests", "*/internal/tests"]

[tool.coverage.report]
exclude_lines = [
  "no cov",
  "if __name__ == .__main__.:",
  "if TYPE_CHECKING:",
]
